--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="Content-type: text/html;charset=UTF-8">
-        <title>CHANGE THIS</title>
+        <title>{{title}}</title>
         <link rel="stylesheet" type="text/css" media="all" href="style.css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
         <link rel="alternate" type="application/rss+xml" href="rss" title="Sample Feed">
